// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Img tag renders error 1`] = `
<img
  alt="description"
  className="d1mbjgxe a1p8pt7"
  src="another.png"
  srcSet={null}
  style={
    Object {
      "background": "red",
      "color": "red",
      "filter": "blur(10px)",
      "transform": "scale3d(1.05,1.05,1)",
      "transition": "initial",
    }
  }
/>
`;

exports[`Img tag renders initial 1`] = `
<img
  alt="description"
  className="d1mbjgxe a1p8pt7"
  src="another.png"
  srcSet={null}
  style={
    Object {
      "background": "red",
      "color": "red",
      "filter": "blur(10px)",
      "transform": "scale3d(1.05,1.05,1)",
      "transition": "initial",
    }
  }
/>
`;

exports[`Img tag renders loaded 1`] = `
<img
  alt="description"
  className="d1mbjgxe a1p8pt7"
  src="image.png"
  srcSet="100w image-small.png"
  style={
    Object {
      "background": "red",
      "color": "red",
      "filter": "initial",
      "transform": "initial",
      "transition": "filter 0.5s ease, transform 0.5s ease",
    }
  }
/>
`;

exports[`Img tag renders manual 1`] = `
<img
  alt="description"
  className="d1mbjgxe a1p8pt7"
  src="another.png"
  srcSet={null}
  style={
    Object {
      "background": "red",
      "color": "red",
      "filter": "blur(10px)",
      "transform": "scale3d(1.05,1.05,1)",
      "transition": "initial",
    }
  }
/>
`;

exports[`Img tag renders offline 1`] = `
<img
  alt="description"
  className="d1mbjgxe a1p8pt7"
  src="another.png"
  srcSet={null}
  style={
    Object {
      "background": "red",
      "color": "red",
      "filter": "blur(10px)",
      "transform": "scale3d(1.05,1.05,1)",
      "transition": "initial",
    }
  }
/>
`;
